SERVER-50063: Consolidate OplogFetcher return code to CallbackCanceled when shutting down

(cherry picked from commit a12299145c35b0cebea60f303613f85472b2915f)